--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html><head><title>about me!</title></head></html>
 <body>
 <h1>- 👋 Hi, I’m @tcho-Luminary
-- 👀 I’m interested in python
-- 🌱 I’m currently learning python
-- 📫 How to reach me on discord: "__tabur__"
-- 😄 Pronouns: he/him
-- ⚡ Fun fact: nothing :smile:
+
 </h1>
+<h1>- 👀 I’m interested in python</h1>
+<h1>- 🌱 I’m currently learning python</h1>
+<h1>- 📫 How to reach me on discord: "__tabur__"</h1>
+<h1>- 😄 Pronouns: he/him</h1>
+<h1>- ⚡ Fun fact: nothing :smile:</h1>
 
 
 
