--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>- 🌱 I’m currently learning python</h1>
 <h1>- 📫 How to reach me on discord: "__tabur__"</h1>
 <h1>- 😄 Pronouns: he/him</h1>
-<h1>- ⚡ Fun fact: nothing :smile:</h1>
+<h1>- ⚡ Fun fact: nothing 😄</h1>
 
 
 
